--- a/shop.html
+++ b/shop.html
@@ -22,10 +22,52 @@
 	<body>
 		<h1>What to buy</h1>
 		<p title="a gentle reminder">Don't forget to buy this stuff.</p>
+		<p>This is just a test</p>
 		<ul id="purchases">
 			<li>A tin of beans</li>
 			<li calss="sale">Cheese</li>
 			<li class="sale important">Milk</li>
 		</ul>
+		<script>
+			/*function getElementsByClassName(node, classname) {
+				if(node.getElementsByClassName){
+					return node.getElementsByClassName(classname);
+				}else{
+					var results = new Array();
+					var elems = node.getElementsByTagName("*");
+					for(var i=0; i < elems.length; i++){
+						if(elems[i].className.indexOf(classname) != -1){
+							results[results.length] = elems[i];
+						}
+					}
+					return results;
+				}
+			}*/
+			//alert(typeof document.getElementById("purchases"))
+			//alert(document.getElementsByTagName("li").length)
+			/*for(var i=0; i < document.getElementsByTagName("li").length; i++){
+				alert(typeof document.getElementsByTagName("li")[i]);
+			}*/
+			/*var items = document.getElementsByTagName("li")
+			for(var i=0; i < items.length; i++){
+				alert(items[i])
+			}*/
+			//alert(document.getElementsByTagName("*").length)
+			//var shopping = document.getElementById("purchases");
+			//var items = shopping.getElementsByTagName("*");
+			//alert(items.length)
+			/*for(var i=0; i < items.length; i++){
+				alert(typeof items[i])
+			}*/
+			var paras = document.getElementsByTagName("p");
+			for(var i=0; i < paras.length; i++){
+				var title_text = paras[i].getAttribute("title");
+				if(title_text != null){
+					alert(title_text)
+				}
+				//alert(paras[i].getAttribute("title"));
+			}
+
+		</script>
 	</body>
 </html>
