--- a/shop.html
+++ b/shop.html
@@ -59,13 +59,23 @@
 			/*for(var i=0; i < items.length; i++){
 				alert(typeof items[i])
 			}*/
+			/*var paras = document.getElementsByTagName("p");
+			for(var i=0; i < paras.length; i++){
+				var title_text = paras[i].getAttribute("title");
+				if(title_text) alert(title_text)
+				//alert(paras[i].getAttribute("title"));
+			}*/
+			/*var shopping = document.getElementById("purchases");
+			alert(shopping.getAttribute("title"));
+			shopping.setAttribute("title", "a list of goods");
+			alert(shopping.getAttribute("title"));*/
 			var paras = document.getElementsByTagName("p");
 			for(var i=0; i < paras.length; i++){
 				var title_text = paras[i].getAttribute("title");
-				if(title_text != null){
-					alert(title_text)
+				if(title_text){
+					paras[i].setAttribute("title", "brand new title text");
+					alert(paras[i].getAttribute("title"));
 				}
-				//alert(paras[i].getAttribute("title"));
 			}
 
 		</script>
